--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -1,1 +1,26 @@
+{% extends 'base.html' %}
 
+{% block content %}
+<div class="w3-main" style="margin-left:340px;margin-right:40px">
+    <h1>{% block title %} Forgot Password {% endblock %}</h1>
+
+    <form method="POST" action="/forgotpassword"> 
+
+        <div class="w3-section">
+            <label for="email">Email</label>
+            <input class="w3-input w3-border" type="email" id="email" name="email" required>
+        </div>
+
+        <br />
+        <button type="submit" class="btn btn-primary">Reset Password</button>
+
+        <!-- Flashed messages for errors -->
+        <div class="w3-container" style="margin-top:5px">
+            {% for message in get_flashed_messages() %}
+            <div class="alert alert-danger" role="alert">{{ message }}</div>
+            {% endfor %}
+        </div>
+
+    </form>
+</div>
+{% endblock %}
