--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -4,7 +4,7 @@
 <div class="w3-main" style="margin-left:340px;margin-right:40px">
     <h1>{% block title %} Forgot Password {% endblock %}</h1>
 
-    <form method="POST" action="/forgotpassword"> 
+    <form method="POST" action="password"> 
 
         <div class="w3-section">
             <label for="email">Email</label>
