--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -10,6 +10,16 @@
             <label for="email">Email</label>
             <input class="w3-input w3-border" type="email" id="email" name="email" required>
         </div>
+        
+        <div class="w3-section">
+            <label for="password">New Password</label>
+            <input class="w3-input w3-border" type="password" name="password" required>
+        </div>
+
+        <div class="w3-section">
+            <label for="confPass">Confirm New Password</label>
+            <input class="w3-input w3-border" type="password" name="confPass" required>
+        </div>
 
         <br />
         <button type="submit" class="btn btn-primary">Reset Password</button>
