--- a/passwordreset.html
+++ b/passwordreset.html
@@ -1,8 +1,10 @@
+<!-- HTML for Password Reset Page -->
+
 {% extends 'base.html' %}
 
 {% block content %}
 <div class="w3-main" style="margin-left:340px;margin-right:40px">
-    <h1>{% block title %} Forgot Password {% endblock %}</h1>
+    <h1>{% block title %} Password Reset {% endblock %}</h1>
 
     <form method="POST" action="password"> 
 
